my first commit

--- a/templates/inventories.html
+++ b/templates/inventories.html
@@ -39,7 +39,7 @@
           <a class="nav-link" href="/inventories">Inventories</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/stock">Stock</a>
+          <a class="nav-link" href="/inventories">Stock</a>
         </li>
 
       </ul>
@@ -125,10 +125,10 @@
           <a href="/sales">
             <li class="list-group-item"><i class="fa fa-money" aria-hidden="true"></i> Sales</li>
           </a>
-          <a href="/stock">
+          <a href="/inventories">
             <li class="list-group-item"><i class="fa fa-dropbox" aria-hidden="true"></i> Stock</li>
           </a>
-          <a href="/users">
+          <a href="/">
             <li class="list-group-item"><i class="fa fa-user" aria-hidden="true"></i> Users</li>
           </a>
         </ul>
