--- a/templates/index.html
+++ b/templates/index.html
@@ -14,16 +14,16 @@
     <div class="cointainer">
       <nav class="navbar navbar-expand-lg bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">IMS</a>
+          <a class="navbar-brand" href="">IMS</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-              <a class="nav-link" href="#">Home</a>
-              <a class="nav-link active" aria-current="page" href="#">Inventory</a>
-              <a class="nav-link" href="#">Dashboard</a>
-              <a class="nav-link" href="#">Sales</a>
+              <a class="nav-link" href="/">Home</a>
+              <a class="nav-link active" aria-current="page" href="/inventories">Inventory</a>
+              <a class="nav-link" href="/dashboard">Dashboard</a>
+              <a class="nav-link" href="/sales">Sales</a>
               
               
             </div>
